SBVTestSuite/TestSuite/CompileTests/SCase/SCase12.stderr
SCase12.hs:11:14: error: [GHC-39584]
    " SCase12.hs:14:16: sCase: Wildcard makes the remaining matches redundant:
        SCase12.hs:15:16: _

    " In the quasi-quotation:
        [sCase|Expr e of
               Zero          -> 0
               Num i         -> i
               _ -> 3
               _ -> 5
      |]
   |
11 | t e = [sCase|Expr e of
   |              ^^^^^^^^^...

